--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
-    "@types/dompurify": "^3.2.0",
     "@types/file-saver": "^2.0.7",
     "@types/papaparse": "^5.3.16",
     "@types/xlsx": "^0.0.36",
@@ -61,12 +60,14 @@
     "next-themes": "^0.3.0",
     "papaparse": "^5.5.3",
     "pdf-parse": "^1.1.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -81,6 +82,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
